--- a/feeds.yaml
+++ b/feeds.yaml
@@ -39,3 +39,6 @@ energie-mediateur:
 engie:
   enabled: false
   url: https://newsroom.engie.com/news/
+france-renouvelables:
+  enabled: false
+  url: https://www.france-renouvelables.fr/actualites/
