ENH: Scraping without selenium

--- a/feeds.yaml
+++ b/feeds.yaml
@@ -1,5 +1,5 @@
 rte-actualite:
-  enabled: true
+  enabled: false
   url: https://www.rte-france.com/actualites
   img: https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/RTE_logo.svg/180px-RTE_logo.svg.png
   name: RTE Actualité
