--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -6,6 +6,7 @@ on:
   workflow_dispatch:     # permet lancement manuel depuis l'onglet Actions
 
 jobs:
+
   run-script:
     runs-on: ubuntu-latest
     steps:
@@ -16,6 +17,18 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      - name: Générer config.yaml à partir des variables d'environnement
+        run: |
+          cat > config.yaml <<'YAML'
+          usr: "${USR}"
+          url: "${URL}"
+          pwd: "${PWD}"
+          YAML
+        env:
+          USR: ${{ secrets.USR }}
+          URL: ${{ secrets.URL }}
+          PWD: ${{ secrets.PWD }}
 
       - name: Exécuter le script
         run: |
