Fix formatting of secrets in config.yaml generation
Update echo commands to format secrets in config.yaml correctly.

--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -20,10 +20,10 @@ jobs:
 
       - name: Générer config.yaml à partir des variables d'environnement
         run: |      
-          echo "usr:${{ secrets.USR }}" >> config.yaml
-          echo "url:${{ secrets.URL }}" >> config.yaml
-          echo "pwd:${{ secrets.PWD }}" >> config.yaml
-        
+          echo "usr: \"${{ secrets.USR }}\"" > config.yaml
+          echo "url: \"${{ secrets.URL }}\"" >> config.yaml
+          echo "pwd: \"${{ secrets.PWD }}\"" >> config.yaml
+
       - name: Exécuter le script
         run: |
           python sync-ddgs.py
