CLEAN: Move *.yml into config folder

--- a/config/search-queries.yaml
+++ b/config/search-queries.yaml
@@ -1,1 +1,30 @@
-
+- q: epr Flamanville
+  tag: Nucléaire, EPR
+- q: electricite hydrogene
+  tag: H2, EnR
+- q: electricite rte france
+  tag: RTE
+- q: electricite lesechos.fr
+  tag: None
+- q: "agence internationale énergie -atomique -aiea"
+  tag: None
+- q: data center france
+  tag: "Nouveaux usages"
+- q: stockage électrique batterie
+  tag: Stockage
+- q: prix spot négatif énergie
+  tag: EPEX-Spot
+- q: EPEX Spot
+  tag: EPEX-Spot
+- q: marché de gros electricite
+  tag: EPEX-Spot
+- q: "prix de lélectricité"
+  tag: EPEX-Spot
+- q: production photovoltaïque éolien
+  tag: PV, Eole, EnR
+- q: production énergie solaire
+  tag: PV, Eole, EnR
+- q: production énergie éolienne
+  tag: PV, Eole, EnR
+- q: agrivoltaisme france
+  tag: PV, EnR
