FIX: " in search-queries

--- a/config/search-queries.yaml
+++ b/config/search-queries.yaml
@@ -12,7 +12,7 @@
   tag: None
 - q: "agence internationale énergie -atomique -aiea"
   tag: None
-- q: "data center" france
+- q: '"data center" france'
   tag: Nouveaux usages
 - q: stockage électrique batterie
   tag: Stockage
